# CSC-Homework

./: .gitignore  CMakeLists.txt  LICENSE
CSC 211-B1/CH04 Test/: list.h  list_const_iterator.h  list_iterator.h
CSC 211-B1/CH04HW/: list.h  list_iterator.h
CSC 211-B1/CH04HW - Double Linked List/: list.h
CSC 211-B1/CH04Test/: DNode.h  TestCases.h  circular_list.h  circular_list_iterator.h
CSC 211-B1/CH04Test - Circular Double Linked List/: circular_list_const_iterator.h
CSC 211-B1/CH05HW - Stacks and Queues/: Order.h  Write a program to handle the flow of inventory into and out of a warehouse(1).docx
CSC 211-B1/CH05Test - Infix Calculator/: Infix_Evaluator.h  TestCases.h  main.cpp
CSC 211-B1/CH07HW - Binary Tree/: Contact.h  Customer.h  HW5 BST Assignment.docx
CSC 211-B1/CH07Test - River System Recursion/: Rivers.h  TestCases.h  main.cpp
CSC 211-B1/CH09HW - HashMap/: Person.cpp
CSC 211-B1/CH09HW - HashMap Chain/: Hash_Table_Chain.h  Test_Map_to_string.cpp  Test_Person.cpp
CSC 211-B1/CH09Test - HashMap Open Adressing/: Hash_Table_Open.h  TestCases.h  const_iterator.h  hash.h  iterator.h
CSC 211-B1/CH11HW - AVL Tree/: AVLNode.h  AVL_Tree.h  Bad_Structure.h  Binary_Search_Tree.h  Binary_Tree.h  TestCases.h
CSC 211-B1/CH11Test - Red Black Tree/: BST_With_Rotate.h  Bad_Structure.h  Binary_Search_Tree.h  Binary_pretty_print.h  RBNode.h  Red_Black_Tree.h  TestCases.h
CSC 211-B1/CH11Test - RedBlack Tree/: BST_With_Rotate.h  BTNode.h  RBNode.h  Red_Black_Tree.h  TestCases.h  pre_order_traversal.h
Chapter 1/1.14 Write a program that computes the sum of the first ten positive integers/: main.cpp
Chapter 1/1.15 Write a program that computes the product of the first ten positive integers/: main.cpp
Chapter 1/1.17 Hello world (C++)/: main.cpp
Chapter 1/1.18 Basic output with variables (C++)/: main.cpp
Chapter 1/1.20 Basics/: main.cpp
Chapter 1/1.21 Interleaved input and output/: main.cpp
Chapter 1/1.22 Hello World!/: main.cpp
Chapter 1/1.24 House real estate summary/: main.cpp
Chapter 1/1.25 Right-facing arrow/: main.cpp
Chapter 1/1.27 Basic output with variables/: main.cpp
Chapter 2/2.26 Painting a wall (C++)/: main.cpp
Chapter 2/2.28 Write a program that prompts the user for two/: main.cpp
Chapter 2/2.30 Write a program that asks the user for the lengths of the sides of a rectangle/: main.cpp
Chapter 2/2.31 In class practice exam/: main.cpp
Chapter 2/2.34 Making changes/: main.cpp
Chapter 2/2.36 Divide input integers/: main.cpp
Chapter 2/2.37 Caffeine levels/: main.cpp
Chapter 2/2.39 Driving costs/: main.cpp
Chapter 2/2.47 Variables, input, and casting/: main.cpp
Chapter 2/2.48 Painting a wall/: main.cpp
Chapter 3/3.22 Text message abbreviation decoder (C++)/: main.cpp
Chapter 3/3.27 Write a program that takes user input describing a playing card/: main.cpp
Chapter 3/3.32 Write a program that reads in three strings/: main.cpp
Chapter 3/3.35 Write a unit conversion program using the conversion factors/: main.cpp
Chapter 3/3.45 Smallest number/: main.cpp
Chapter 3/3.46 Interstate highway numbers/: main.cpp
Chapter 3/3.47 Seasons/: main.cpp
Chapter 3/3.49 Leap year/: main.cpp
Chapter 3/3.51 Text message abbreviation decoder/: main.cpp
Chapter 3/3.52 Text message decoder/: main.cpp
Chapter 4/4.25 Convert to reverse binary/: main.cpp
Chapter 4/4.27 Varied amount of input data/: main.cpp
Chapter 4/4.28 Count characters/: main.cpp
Chapter 4/4.29 Checker for integer string/: main.cpp
Chapter 4/4.33 Countdown until matching digits/: main.cpp
Chapter 4/4.37 Brute force equation solver/: main.cpp
Chapter 4/4.42 Matching strings/: main.cpp
Chapter 5/5.30 Step counter/: main.cpp
Chapter 5/5.31 A jiffy/: main.cpp
Chapter 5/5.33 Swapping variables/: main.cpp
Chapter 5/5.35 Flip a coin/: main.cpp
Chapter 5/5.39 Max and min numbers/: main.cpp
Chapter 5/5.40 Acronyms/: main.cpp
Chapter 5/5.41 Leap year - functions/: main.cpp
Chapter 5/5.43 Text analyzer & modifier/: main.cpp
Chapter 5/5.44 Authoring assistant/: main.cpp
Chapter 5/CH05 EXAM/: main.cpp
Chapter 6/6.49 Output numbers in reverse - (Array)/: main.cpp
Chapter 6/6.52 Output values below an amount/: main.cpp
Chapter 6/6.55 Adjust list by normalizing/: main.cpp
Chapter 6/6.57 Word frequencies/: main.cpp
Chapter 6/6.61 Elements in a range/: main.cpp
Chapter 6/6.63 Two smallest numbers/: main.cpp
Chapter 6/6.64 People's weights (Vectors)/: main.cpp
Chapter 6/6.65 Soccer team roster (Vectors)/: main.cpp
Chapter 6/6.67 Contact list/: main.cpp
Chapter 6/6.67 Multiples of ten in a vector/: main.cpp
Chapter 6/6.68 Mock Exam - Vector of Multiples of ten i/: main.cpp
Chapter 6/6.68 Sort a vector/: main.cpp
Chapter 6/6.69 Contact list/: main.cpp
Chapter 6/6.73 Subtracting list elements from max - functions/: main.cpp
Chapter 6/6.74 Word frequencies - functions/: main.cpp
In-Class Programs/Convert Numbers to Words/: main.cpp
In-Class Programs/Count Words in a String/: main.cpp
In-Class Programs/Grade Conversion/: main.cpp
In-Class Programs/Quadratic Formula/: main.cpp
In-Class Programs/Toll Prices/: main.cpp
Intro to Software Engineering CSC 212-90/: Abstract.docx  Abstractv2.docx  Abstractv3.docx  Individual Progress Report 02-08-25.docx  Individual Progress Report 02-15-25.docx  Individual Progress Report 02-22-25.docx  Individual Progress Report 03-01-25.docx  Individual Progress Report 03-08-25.docx  Individual Progress Report 03-15-25.docx  Individual Progress Report 03-22-25.docx  Individual Progress Report 04-05-25.docx  Individual Progress Report 04-12-25.docx  Individual Progress Report 04-19-25.docx  Individual Progress Report 04-26-25.docx  Work Division.docx  pdf - Shortcut.lnk  ~$dividual Progress Report 03-22-25.docx  ~$stract.docx  ~WRL3837.tmp
Intro to Software Engineering CSC 212-90/Paper/: Paper (1).docx  Paper v1.docx  Paper v2.docx  Paper v3.docx  Paper v4.docx  Paper.docx  Project Data Flow Diagram.drawio  Project Paper (E1).docx  Project Paper (E10).docx  (+15 more)
Templates/: CMakeLists.txt
(+475 files in other folders)
